# uPhonor

./: .gitignore  CONFIG_SYSTEM.md  FIX_SUMMARY.md  MESON_BUILD_GUIDE.md  MODULAR_STRUCTURE.md  Makefile  PYTHON_BINDINGS.md  README.md  RT_OPTIMIZATION_REPORT.md  SAVE_FUNCTION_DOCS.md  STATE_PRESERVATION_FIX.md  SYNC_CUTOFF_IMPLEMENTATION.md  __init__.py  _uphonor_cffi.c  audio_buffer_rt.c  audio_buffer_rt.h  audio_processing.c  audio_processing.h  audio_processing_rt.c  audio_processing_rt.h  buffer_manager.c  buffer_manager.h  build.py  build_cffi.py  build_pdm.py  cli.c  cli_rubberband.c  common_types.h  config.c  config.h  config_file_loader.c  config_utils.c  config_utils.h  example_session.json  examples.py  holo.c  holophono_integration.py  loop_manager.c  loop_manager.h  main.c  (+37 more)
.github/workflows/: build-release.yaml  draft-release.yaml  publish-release.yaml  release.yaml
app/: index.html  index.ts  uphonor.tsx
configs/: launchpadX_uPhonor.syx  midi-ab.carxp  uPhonor-0-9_LaunchpadX.syx
examples/: dsp.c  filter.c  ring1.c  ring2.c  stream.c  tone1.c  tone2.c
scripts/: check_deps.py  run_in_source.sh
uphonor/: __init__.py
